[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ossfuzz-module"
description = "A Python module for interacting with OSS-Fuzz services"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
authors = [
    {name = "OSS-Fuzz Module Contributors", email = "your-email@example.com"}
]
version = "0.1.0" 